	- CHANGE: GlyphInfo type to userdata.
	- ADDED: GlyphInfo management functions.
	- CHANGE: GuiTabBar works differently to raygui implementation.
	- CHANGE: Raygui lib refactoring.
	- ADDED: Raygui lib extensions property list.
	- ADDED: Text codepoints management functions.
	- ADDED: Rune, UTF8 lib.
	- CHANGE: Raygui styles include properties, texture and font.

DETAILED CHANGES:
	- REMOVED: DrawLineBezierQuad, DrawLineBezierCubic.
	- REMOVED: GenImageGradientV, GenImageGradientH.
	- ADDED: GenImageGradientLinear and GenImageGradientSquare.
	- ADDED: LoadImageSvg and ExportImageToMemory.
	- ADDED: ImageRotate.
	- ADDED: SetTextLineSpacing.
	- ADDED: LoadSoundAlias and UnloadSoundAlias.
	- ADDED: GetApplicationDirectory.
	- FIXED: Snake example after Vector2Angle change.
	- FIXED: Raygui edit mode selection.
	- CHANGE: Moved glfw headers to GLFW folder.
	- CHANGE: Term globals changed to defines in documentation.
	- CHANGE: Event documentation is now described in c files.
	- ADDED: ExportBufferAsCode.
	- ADDED: GetTextureDefault.
	- CHANGE: Renamed Files management functions to Files system functions as in raylib.
	- CHANGE: Renamed ExportBufferAsCode to ExportDataAsCode.
	- ADDED: BoneInfo.
	- ADDED: Transform.
	- ADDED: GetShaderId.
	- FIXED: rlSetVertexAttribute pointer offset.
	- ADDED: GetImageData.
	- FIXED: CameraLib. Slow lateral movement.
	- ADDED: GetGlyphInfoByIndex and GetGlyphAtlasRecByIndex.
	- ADDED: Raygui lib extensions example.
	- CHANGE: Raygui.h returns textBounds for some controls.
	- CHANGE: Raygui lib changed term element to control to correspond raylib naming.
	- ADDED: LoadBufferFromString, LoadWaveFromMemory and LoadMusicStreamFromMemory.
	- CHANGE: GetGlyphInfo and GetGlyphInfoByIndex return glyphInfo as lightuserdata.
	- ADDED: TextInsert and TextSplit.
	- ADDED: __concat for variable wrapper libraries.

------------------------------------------------------------------------
Release:	ReiLua version 0.6.0		Using Raylib 4.5