@@ -2,6 +2,9 @@ Current {
 }
 
 Backlog {
+	* Godot scene importer lib.
+	* Script to find unimplemented raylib functions. Should have list for fuctions that will not
+	be implemented.
 	* Raygui lib
 		* Check if could remove flickering from changing draw order by making queue for order changing and only
 		change them after everything is drawn.
@@ -22,6 +25,7 @@ Backlog {
 }
 
 Bugs {
+	* glfwSet*Callback functions segfault on Windows. Should keep Lua events off.
 }
 
 Needs Testing {
